--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <footer class="bg-section-secondary py-3">
       <div class="container text-center">
-        <p class="small m-0">Made by me</p>
+        <p class="text-accent text-xsmall m-0">Made with love by <a href="https://orderly.cc" target="_blank">Orderly</a></p>
       </div>
     </footer>
 
